// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Badge CustomIcon smoke-test 1`] = `
<div data-test="Badge-undefined"
     class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
>
  <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
    Badge
  </span>
  <div class="flex rounded-full cursor-pointer">
    <span class="ri-alert-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-8">
    </span>
  </div>
</div>
`;

exports[`design-system/Badge Default smoke-test 1`] = `
<div data-test="Badge-undefined"
     class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
>
  <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
    Badge
  </span>
</div>
`;

exports[`design-system/Badge Grid smoke-test 1`] = `
<div class="flex gap-16 flex-wrap">
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      default
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-8">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-grey-8">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-grey-8 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      standard
    </div>
    <div data-test="Badge-undefined"
         class="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-primary-7 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-primary-7 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-primary-7">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-primary-7 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-primary-7">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-primary-7 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-primary-7 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      success
    </div>
    <div data-test="Badge-undefined"
         class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-success-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-success-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-success-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-success-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-success-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-success-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-success-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      warning
    </div>
    <div data-test="Badge-undefined"
         class="bg-warning-2 border-warning-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-warning-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-warning-2 border-warning-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-warning-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-warning-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-warning-2 border-warning-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-warning-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-warning-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-warning-2 border-warning-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-warning-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-warning-2 border-warning-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-warning-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      new
    </div>
    <div data-test="Badge-undefined"
         class="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-new-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-new-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-new-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-new-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-new-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-new-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-new-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      error
    </div>
    <div data-test="Badge-undefined"
         class="bg-error-2 border-error-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-error-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-error-2 border-error-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-error-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-error-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-error-2 border-error-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-error-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-error-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-error-2 border-error-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-error-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-error-2 border-error-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-error-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      info
    </div>
    <div data-test="Badge-undefined"
         class="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-info-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-info-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-info-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-info-1">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-info-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-info-1 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
  <div class="col-span-1 flex flex-col gap-4">
    <div class="capitalize text-sm font-medium">
      grey
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-grey-6 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-grey-6 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded flex-row-reverse !px-1.5 !py-0.5"
    >
      <span class="text-grey-6 font-bold leading-4 text-left line-clamp-1 text-xs uppercase">
        Badge
      </span>
      <div class="flex rounded-full cursor-pointer">
        <span class="ri-close-circle-fill font-normal text-center h-3.5 w-3.5 text-[0.875rem] leading-[0.875rem] text-grey-6">
        </span>
      </div>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded"
    >
      <span class="text-grey-6 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
    <div data-test="Badge-undefined"
         class="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white"
    >
      <span class="text-grey-6 font-bold leading-4 text-left line-clamp-1 mt-0.5 text-sm uppercase">
        Badge
      </span>
    </div>
  </div>
</div>
`;
